<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Guías -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/primera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/segunda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="215dp"
            android:layout_height="202dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/lata_sin_fondo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bienvenido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/bienvenido_a_canhub"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="@id/primera"
            app:layout_constraintEnd_toEndOf="@id/segunda" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombreInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/bienvenido"
            app:layout_constraintStart_toStartOf="@id/primera"
            app:layout_constraintEnd_toEndOf="@id/segunda">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textSize="18sp"
                android:background="@drawable/caja_texto"
                android:fontFamily="@font/poppins"
                android:hint="@string/email"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contrasenaInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/nombreInput"
            app:layout_constraintStart_toStartOf="@id/primera"
            app:layout_constraintEnd_toEndOf="@id/segunda">

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textSize="18sp"
                android:background="@drawable/caja_texto"
                android:inputType="textPassword"
                android:hint="@string/contrase_a"
                android:fontFamily="@font/poppins" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/iniciarSesion"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/iniciar_sesion"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:backgroundTint="@color/azul"
            android:onClick="goMain"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/contrasenaInput"
            app:layout_constraintStart_toStartOf="@id/primera"
            app:layout_constraintEnd_toEndOf="@id/segunda" />

        <TextView
            android:id="@+id/tienes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins"
            android:text="@string/no_tienes_una_cuenta"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/iniciarSesion"
            app:layout_constraintStart_toStartOf="@id/primera" />

        <TextView
            android:id="@+id/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/registrarse"
            android:textColor="@color/azulverde"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/iniciarSesion"
            app:layout_constraintStart_toEndOf="@id/tienes" />

        <TextView
            android:id="@+id/continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/continuar_sin_inciar_sesion"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:onClick="goMain"
            app:layout_constraintTop_toBottomOf="@id/tienes"
            app:layout_constraintStart_toStartOf="@id/primera"
            app:layout_constraintEnd_toEndOf="@id/segunda" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
